--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <div class="container-fluid">
               <div class="navbar-header" >
                  <a class="navbar-brand" href="/" >WoSo</a> 
-		         <a class="navbar-brand" href="http://hgnet.xyz/" target="_blank" >欢哥网</a> 
+		         <a class="navbar-brand" href="http://52hg.3vfree.com/" target="_blank" >欢哥网</a> 
               </div>
             </div>
       </nav>
